@@ -74,9 +74,37 @@
     <property name="confFile" value="default" />
     <property name="coloredLogging" value="false" />
     <target name="runserver">
+        <!-- java 17+ recommended for mature ZGC implementation -->
+        <echo message="Using JVM 17+ launch arguments"/>
         <java classname="com.openrsc.server.Server" fork="true">
-            <!-- usage: `ant runserver -DconfFile=openrsc` to run server with config file openrsc.conf -->
-            <!-- see also: Deployment_Scripts/run.sh -->
+            <!-- usage: `ant runserver -DconfFile=preservation` to run server with config file preservation.conf -->
+            <arg value="${confFile}.conf"/>
+            <jvmarg line="-Xmx2048M -Xdiag -XX:+UseZGC -XX:+UseBiasedLocking -XX:NewSize=128m -DcoloredLogging=${coloredLogging}"/>
+            <classpath>
+                <pathelement location="${lib}/netty-all-4.1.8.Final.jar"/>
+                <pathelement location="${lib}/disruptor-3.3.0.jar"/>
+                <pathelement location="${lib}/log4j-api-2.17.0.jar"/>
+                <pathelement location="${lib}/log4j-core-2.17.0.jar"/>
+                <pathelement location="${lib}/log4j-iostreams-2.17.0.jar"/>
+                <pathelement location="${lib}/xpp3_min-1.1.4c.jar"/>
+                <pathelement location="${lib}/xpp3-1.1.4c.jar"/>
+                <pathelement location="${lib}/xstream-1.4.9.jar"/>
+                <pathelement location="${lib}/mysql-connector-java-8.0.19.jar"/>
+                <pathelement location="${lib}/disruptor-3.3.5.jar"/>
+                <pathelement location="${lib}/commons-lang-2.6.jar"/>
+                <pathelement location="${lib}/*"/>
+                <pathelement location="${lib}/commons-codec-1.14.jar"/>
+                <pathelement path="${jar}/"/>
+            </classpath>
+        </java>
+    </target>
+
+    <target name="runserverg1gc">
+        <!-- java 8 compatible jvm args. Add more heap if you can. -->
+        <echo message="Using JVM arguments for Java 8 minimum."/>
+        <echo message="Upgrade to Java 17 or later for better garbage collection."/>
+        <java classname="com.openrsc.server.Server" fork="true">
+            <!-- usage: `ant runserver -DconfFile=preservation` to run server with config file preservation.conf -->
             <arg value="${confFile}.conf"/>
             <jvmarg line="-Xdiag -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:+UseBiasedLocking -XX:NewSize=64m -DcoloredLogging=${coloredLogging}"/>
             <classpath>
